--- a/Memoline/Properties/AndroidManifest.xml
+++ b/Memoline/Properties/AndroidManifest.xml
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="Memoline.Memoline" android:versionCode="1" android:versionName="1.0">
-  <uses-sdk android:minSdkVersion="16" />
-  <application android:label="Memoline"></application>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="kr.neko.sokcuri.memoline" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="16" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<application android:label="Memoline" android:icon="@drawable/logo_256"></application>
 </manifest>
